Added a supportsMultiDatasource variable to ChartMetadata (default to false).
Made pie chart support multi datasource

--- a/contrib/docker/Dockerfile
+++ b/contrib/docker/Dockerfile
@@ -62,6 +62,7 @@ USER superset
 
 RUN cd superset/assets \
     && npm ci \
+    && npx patch-package \
     && npm run build \
     && rm -rf node_modules
 
